Closed Bug 1231124 Opened 10 years ago Closed 10 years ago

[Static Analysis][Uninitialized pointer field] Function AudioTimelineEvent from AudioEventTimeline.h

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: andi, Assigned: andi)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID 1327957)

Attachments

(1 file, 1 obsolete file)

The Static Analysis tool Coverity added that mCurve is not initialized in constructor leading to an undefined value for pointer.
Attached patch Bug 1231124 .diff (obsolete) — Splinter Review
Hello Johnny, Could you please take a look other this patch? THX
Attachment #8696679 - Flags: review?(jst)
Whiteboard: CID → CID 1327957
Comment on attachment 8696679 [details] [diff] [review] Bug 1231124 .diff Use nullptr, not NULL, r=me As far as I see, the code is safe here though, since mCurve is always set if mType is AudioTimelineEvent::SetValueCurve
Attachment #8696679 - Flags: review?(jst) → review+
Thanks for the review, i've updated the patch.
Attachment #8696679 - Attachment is obsolete: true
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: