Bug 1231124  - addded mCurve to constructor. r=smaug